--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 title: ASSET
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "/ASSEST" #important: start with /ASSEST
-url: "http://www.scorelab.org/ASSEST"
+baseurl: "/ASSEST" #important: start with /
+url: "http://www.scorelab.org"
 
 # Build settings
 markdown: kramdown
