--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: ASSET
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "" #important: start with /
-url: "http://34.235.47.58"
+url: "http://www.scorelab.org/ASSET"
 
 # Build settings
 markdown: kramdown
