--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+
+# Created by https://www.gitignore.io/api/jekyll
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-metadata
+
+# End of https://www.gitignore.io/api/jekyll
+
 /.project
